Creacion de una base de datos para promos y agregación de botones

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Burguers" asp-action="Index">Burguers</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Promoes" asp-action="Index">Promos</a>
                         </li>
                     </ul>
                 </div>
